# CAOS_RES_Maqueta

./: .gitignore  CHANGELOG.md  README.md  STRUCTURE.md  pyproject.toml
data/: README.md
data-pipeline/maquetalab/: __init__.py  benchmark.py  build.py  do_indicators.py  gen_admin.py  pipeline.py  places.py  regen_index.py
data-pipeline/tools/: compress-bundles.mjs  package-lock.json  package.json
data/derived/: benchmark.json  index.json
data/derived/agra_taj/: buildings.glb  manifest.json  population.glb  roads.glb  terrain.glb
data/derived/amsterdam_center/: green.glb  lod2.glb  manifest.json  population.glb  rail.glb  roads.glb  terrain.glb  water.glb
data/derived/angkor_wat/: manifest.json  population.glb  terrain.glb
data/derived/antofagasta/: green.glb  manifest.json  population.glb  rail.glb  roads.glb  terrain.glb
data/derived/bangkok_center/: admin.json  buildings.glb  manifest.json  population.glb  roads.glb  terrain.glb
data/derived/barcelona_eixample/: buildings.glb  manifest.json  population.glb  roads.glb  terrain.glb
data/derived/barcelona_full/: admin.json  green.glb  manifest.json  population.glb  rail.glb  roads.glb  terrain.glb  water.glb
deploy/: README.md  maqueta.ml.fasl-work.com.nginx
docs/: architecture.md
docs/architecture/: 09_analytical-layers.md
docs/diffusion/: 2026-07-13-fusing-open-geospatial-data-en.md
docs/guides/: 00_instantiate.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json
frontend/src/: architecture.ts  architecture.ts.txt  main.tsx  maqueta.css
tests/: test_maquetalab.py
(+632 files in other folders)
